@@ -245,7 +245,13 @@ else {
 							<span style="font-size: 90%"><i><?php print $_SESSION[$guid]["i18n"]["dateFormat"]  ?></i></span>
 						</td>
 						<td class="right">
-							<input name="dob" id="dob" maxlength=10 value="<?php print dateConvertBack($guid, $row["dob"]) ?>" type="text" style="width: 300px">
+							<?php 
+							$value="" ;
+							if ($row["dob"]!=NULL AND $row["dob"]!="" AND $row["dob"]!="0000-00-00") {
+								$value=dateConvertBack($guid, $row["dob"]) ;
+							}
+							?>
+							<input name="dob" id="dob" maxlength=10 value="<?php print $value ?>" type="text" style="width: 300px">
 							<script type="text/javascript">
 								var dob=new LiveValidation('dob');
 								dob.add( Validate.Format, {pattern: <?php if ($_SESSION[$guid]["i18n"]["dateFormatRegEx"]=="") {  print "/^(0[1-9]|[12][0-9]|3[01])[- /.](0[1-9]|1[012])[- /.](19|20)\d\d$/i" ; } else { print $_SESSION[$guid]["i18n"]["dateFormatRegEx"] ; } ?>, failureMessage: "Use <?php if ($_SESSION[$guid]["i18n"]["dateFormat"]=="") { print "dd/mm/yyyy" ; } else { print $_SESSION[$guid]["i18n"]["dateFormat"] ; }?>." } ); 
@@ -1314,7 +1320,13 @@ else {
 							?>
 						</td>
 						<td class="right">
-							<input name="visaExpiryDate" id="visaExpiryDate" maxlength=10 value="<?php print dateConvertBack($guid, $row["visaExpiryDate"]) ?>" type="text" style="width: 300px">
+							<?php 
+							$value="" ;
+							if ($row["visaExpiryDate"]!=NULL AND $row["visaExpiryDate"]!="" AND $row["visaExpiryDate"]!="0000-00-00") {
+								$value=dateConvertBack($guid, $row["visaExpiryDate"]) ;
+							}
+							?>
+							<input name="visaExpiryDate" id="visaExpiryDate" maxlength=10 value="<?php print $value ?>" type="text" style="width: 300px">
 							<script type="text/javascript">
 								var visaExpiryDate=new LiveValidation('visaExpiryDate');
 								visaExpiryDate.add( Validate.Format, {pattern: <?php if ($_SESSION[$guid]["i18n"]["dateFormatRegEx"]=="") {  print "/^(0[1-9]|[12][0-9]|3[01])[- /.](0[1-9]|1[012])[- /.](19|20)\d\d$/i" ; } else { print $_SESSION[$guid]["i18n"]["dateFormatRegEx"] ; } ?>, failureMessage: "Use <?php if ($_SESSION[$guid]["i18n"]["dateFormat"]=="") { print "dd/mm/yyyy" ; } else { print $_SESSION[$guid]["i18n"]["dateFormat"] ; }?>." } ); 
